fix: align button on the right

--- a/src/styles/RoomTypes.module.css
+++ b/src/styles/RoomTypes.module.css
@@ -7,6 +7,10 @@
   margin: 0 auto;
 }
 
+.mainContainer > button {
+  align-self: flex-end;
+}
+
 .roomTypesContainer {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
